unpackaged/main/default/objects/Credit_Check_Request__c/Credit_Check_Request__c.object-meta.xml
<CustomObject>
    <label>Credit Check Request</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>Credit Check Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Check Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>