unpackaged/main/default/objects/Credit_Check_Request__c/fields/Bureau__c.field-meta.xml
<CustomField>
    <fullName>Bureau__c</fullName>
    <label>Bureau</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>