unpackaged/main/default/objects/Credit_Check_Request__c/fields/eProd__c.field-meta.xml
<CustomField>
    <fullName>eProd__c</fullName>
    <defaultValue>"1"</defaultValue>
    <label>eProd</label>
    <length>1</length>
    <type>Text</type>
</CustomField>