unpackaged/main/default/objects/Credit_Check_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Credit Check Requests</relationshipLabel>
    <relationshipName>Credit_Check_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>